--- a/api.yaml
+++ b/api.yaml
@@ -6,15 +6,15 @@ info:
 tags:
 - name: user
   description: Operations about user
-- name: people
+- name: profile
   description: Operations about profiles
 paths:
-  /userNew:
+  /users:
     post:
       tags:
       - user
       summary: Create user
-      description: This can only be done by the logged in user.
+      description: Creating, signing up new user
       operationId: createUser
       requestBody:
         description: Created user object
@@ -32,7 +32,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-  /user/login:
+  /users/login:
     get:
       tags:
       - user
@@ -73,18 +73,51 @@ paths:
                 type: string
         '400':
           description: Invalid email/password supplied
-  /user/logout:
+        '403':
+          description: Forbidden (user is banned)
+        '404':
+          description: User not registered
+        '500':
+          description: Internal server error
+        '503':
+          description: Service unavailable
+        '504':
+          description: Service timeout
+  /users/{id}:
     get:
       tags:
       - user
       summary: Logs out current logged in user session
       description: ''
       operationId: logoutUser
-      parameters: []
+      parameters:
+      - name: id
+        in: path
+        description: The id of the user to logout
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
-        default:
+        '200':
           description: successful operation
-  /userDelete:
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: Invalid id supplied
+        '404':
+          description: User not found
+        '403':
+          description: Forbidden (user is banned)
+        '500':
+          description: Internal server error
+        '503':
+          description: Service unavailable
+        '504':
+          description: Service timeout
+
     delete:
       tags:
       - user
@@ -92,25 +125,47 @@ paths:
       description: This can only be done by the logged in user.
       operationId: deleteUser
       parameters:
-      - name: email
+      - name: id
         in: path
-        description: The email that needs to be deleted
+        description: The id of the user to delete
         required: true
         schema:
-          type: string
-          format: email
+          type: integer
+          format: int64
       responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: string
         '400':
-          description: Invalid email supplied
+          description: Invalid id supplied
         '404':
           description: User not found
-  /people:
+        '500':
+          description: Internal server error
+        '501':
+          description: Not implemented
+        '503':
+          description: Service unavailable
+        '504':
+          description: Service timeout
+  /profiles/{id}:
     get:
       tags:
-      - people
+      - profile
       summary: Get profiles
       description: Show the profiles to the logged in user
       operationId: getProfiles
+      parameters:
+      - name: id
+        in: path
+        description: The id of the user to get profiles for
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         '200':
           description: successful operation
@@ -122,6 +177,12 @@ paths:
                   $ref: '#/components/schemas/Profile'
         '400':
           description: No profiles can be shown to user.
+        '500':
+          description: Internal server error
+        '503':
+          description: Service unavailable
+        '504':
+          description: Service timeout
 
 components:
   schemas:
